Attempt to resolve double scroll issue

--- a/src/Website/Company.Website/wwwroot/css/app.css
+++ b/src/Website/Company.Website/wwwroot/css/app.css
@@ -16,6 +16,12 @@ app {
     color: var(--basalt-black);
 }
 
+html, body {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
